--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,49 @@
-div{
-    border: 1px solid red;
+*{
+    font-family: Helvetica, sans-serif;
+}
+/* div{
+    border: 1px solid rgb(193, 193, 193);
     margin: 2px;
+} */
+body{
+    margin: 0px;
+}
+img{
+    height: 100%;
+    width: 100%;
+}
+.navbar>div>a{
+    text-decoration: none;
+    color: black;
+}
+.navbar>div>a:hover{
+    text-decoration: none;
+    color: rgb(121, 121, 121);
+}
+.shadow-around{
+    box-shadow: 2px 2px 15px rgb(183, 196, 200);
+}
+.shadow-bottom{
+    box-shadow: 0px 3px 5px rgb(125, 142, 147);
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin: 40px;
+    margin-top: 20px;
+    background-color: white;
 }
 .navbar{
     display: flex;
     justify-content: space-around;
     align-items: center;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+    padding-bottom: 20px;
+    border-bottom: 2px solid black;
 }
 .nav{
     display: flex;
@@ -19,4 +57,132 @@ div{
 img{
     height: 100%;
     width: 100%;
+}
+.s-button{
+    border: none;
+    cursor: pointer;
+    height: 40px;
+    width: 40px;
+    font-size: 30px;
+}
+.bttns{
+    margin-left: 200px;
+}
+.slideshow{
+    display: flex;
+    align-items: center;
+    height: 100vh;
+    width: 90%;
+}
+.slide-images{
+    height: 100%;
+    flex-grow: 10;
+}
+.caption{
+    font-size: 40px;
+    width: 100%;
+    text-align: center;
+}
+.hero{
+    width: 80%;
+}
+.register-login{
+    border: none;
+    background-color: white;
+    height: 40px;
+    width: 100px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    gap: 5px;
+}
+.register-login:hover{
+    background-color: rgb(218, 218, 218);
+}
+.logo-misc{
+    height: 20px;
+    width: 20px;
+}
+.about-us,.products-services,.become-a-client,.downloads{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 40px;
+    align-items: flex-start;
+}
+.flex-clm{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 100%;
+    height: 40vh;
+    align-items: center;
+}
+.imag{
+    max-width: 50vw;
+    max-height: 335px;
+}
+.head{
+    height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 30px;
+}
+a{
+    text-decoration: none;
+    height: 90px;
+    font-weight: bold;
+    color: blue;
+    font-size: 20px;
+}
+a:hover{
+    color: rgb(111, 111, 228)
+}
+.footer{
+    display: flex;
+    height: 100%;
+    width: 100%;
+    justify-content: space-evenly;
+    margin-top: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: black;
+    color: white;
+}
+.footer-line{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 20px;
+}
+.footer-logo-ctn{
+    display: flex;
+    justify-content: flex-start;
+    gap: 5px;
+}
+.footer-logo-ctn>div{
+    max-width: 30px;
+    max-height: 30px;
+}
+.footer-logo-ctn>div>img{
+    height: 100%;
+    width: 100%;
+}
+.text-size{
+    font-size: 25px;
+}
+.footer-line>div>a{
+    font-size: 15px;
+    color: rgb(195, 195, 195);
+}
+.footer-line>div>a:hover{
+    color: rgb(255, 255, 255);
+}
+.margin{
+    margin-left: 200px;
 }
